--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security' //uncommented
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // added in Ticket 2
+	// implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // added in Ticket 2
+	implementation 'io.jsonwebtoken:jjwt:0.9.1' // recommended fix from Tom Tarpey
 
 	runtimeOnly 'org.postgresql:postgresql'
 
